--- a/top_citation_over_years_by_conf.html
+++ b/top_citation_over_years_by_conf.html
@@ -10,19 +10,21 @@
 </head>
 
 <body>
-    <div id="main" class="container"></div>
+    <div id="main" class="tall-container"></div>
     <div class="prev"><a href="/citation_comparison.html">Out-citation number and lag comparison over conferences</a></div>
     <div class="home"><a href="/">Home</a></div>    
     <div class="next"><a href="/top_citation_by_year_or_conf.html">Top cited paper by year/conference</a></div>
 
     <script type="text/javascript">
         var raw_data;
-        var year_data = ['2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015'];
+        var year_data = ['2011', '2012', '2013', '2014', '2015'];
         var legend_data = ['D', 'E', 'J', 'K', 'N', 'P', 'Q', 'S', 'W'];
         $.get('json/top3_citation_new.json').done(function (data) {
             raw_data = data;
             draw_chart(data);
         });
+
+        var maxByConf = {}
 
         function draw_chart(data) {
             var myChart = echarts.init(document.getElementById('main'), 'dark');
@@ -49,6 +51,8 @@
                 // console.log(top2);
                 // console.log(top3);
                 var tops = [top1, top2, top3];
+                var max = Math.max.apply(Math, top1.concat(top2).concat(top3));
+                maxByConf[conf] = max;
                 var colors = ["#1d95ba", "#37AFD4", "#50C8ED"];
                 for (var k = 0; k < 3; k++) {
                     var temp_series = {
@@ -68,19 +72,27 @@
                         },
                         label: {
                             show: true,
-                            position: "insideRight",
+                            position: "insideLeft",
+                            textStyle: {
+		                        // fontWeight: "bold",
+		                        fontSize: 14,
+		                        color: "#050505"
+		                    },
                             formatter: function (data) {
+                            	var detail = getPaperTitle(data)[0];
                                 var topNo = data['seriesIndex'] % 3 + 1;
+                                console.log("max:", max, detail[0], data)
                                 if (data['data'] == 0) {
                                     return ""
                                 } else {
-                                    return "Citied " + data['data'] + " times"
+                                	return detail.substring(0, data["data"] * 2 * 40 / maxByConf[data["seriesName"]]) + "..."
+                                    // return "Citied " + data['data'] + " times"
                                 }
                             }
                         },
                         itemStyle: {
                             color: colors[k]
-                        },
+                        }
                     };
                     series_data.push(temp_series);
                 }
@@ -140,14 +152,21 @@
         };
 
         function getPaperTitle(data) {
+
             var conf = data['seriesName'];
             var year = year_data[data['dataIndex']];
             var top = data['seriesIndex'] - legend_data.indexOf(conf) * 3;
-            var paperDetail = raw_data[conf][year][2 - top];
-            var title = paperDetail[0].split("&&")[0];
-            var marker = paperDetail[0].split("&&")[1];
+            if (raw_data[conf][year]) {
+            	var paperDetail = raw_data[conf][year][2 - top];
+	            var title = paperDetail[0].split("&&")[0];
+	            var marker = paperDetail[0].split("&&")[1];
+	            return [title, marker];
+            } else {
+            	return ["", ""];
+            }
+
             // console.log(paperDetail);
-            return [title, marker];
+            
         };
         function barClicked(data) {
             var detail = getPaperTitle(data);
