--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h1>Conference Data Analysis</h1>
     <h3>Trend Analysis</h3>
     <div><a href="/trend_papercount.html">Paper count over conference series</a></div>
+    <div><a href="/trend_papercount.html">Author count over conference series</a></div>
     <div><a href="/trend_topic_comparison.html">Conference topic comparison of over time</a></div>
     <h3>Contemporary Comparison</h3>
     <div><a href="/citation_comparison.html">Out-citation number and lag comparison over conferences</a></div>
