--- a/trend_topic_comparison.html
+++ b/trend_topic_comparison.html
@@ -14,7 +14,9 @@
             Choose a conference: &nbsp;
     </div>
     <div id="main" class="container wide"></div>
-    <div class="prev"><a href="/trend_papercount.html">Paper count over conference series</a></div>
+    <div class="prev">
+        <a href="/trend_author_count.html">Author count over conference series</a>
+    </div>
     <div class="home"><a href="/">Home</a></div>    
     <div class="next">
         <a href="/citation_comparison.html">Out-citation number and lag comparison over conferences</a>
