--- a/trend_author_count.html
+++ b/trend_author_count.html
@@ -14,9 +14,12 @@
             Choose a conference: &nbsp;
     </div>
     <div id="main" class="container wide"></div>
+    <div class="prev">
+        <a href="/trend_papercount.html">Paper count over conference series</a>
+    </div>
     <div class="home"><a href="/">Home</a></div>    
     <div class="next">
-        <a href="/trend_author_count.html">Author count over conference series</a>
+        <a href="/trend_topic_comparison.html">Conference topic comparison of over time</a>
     </div>
 
     <script type="text/javascript">
@@ -31,7 +34,7 @@
         } 
 
 
-        $.get('json/paper_count.json').done(function(data) {
+        $.get('json/author_count.json').done(function(data) {
 
             var confs = data.map(x => x["name"].substring(0, 1)).filter((v, i, a) => a.indexOf(v) === i).sort();
 
@@ -57,10 +60,10 @@
             myChart.setOption({
                 title: {
                     left: 'center',
-                    text: 'Number of papers at conference ' + conf + ' over conference series'
+                    text: 'Number of authors at conference ' + conf + ' over conference series'
                 },
                 legend: {
-                    data:['Paper count'],
+                    data:['Author count'],
                     left: 'right',
                     top: '25',
                     orient: 'horizontal'
@@ -68,8 +71,9 @@
                 tooltip: {
                     trigger: 'axis',
                     formatter: function(params, callback) {
+                        console.log(data[ params[0].dataIndex ]);
                         return "Conference: " + params[0].axisValue + "<br>" + 
-                               "Number of papers: " + params[0].data
+                               "Number of authors: " + params[0].data ;
                      }
                 },
                 xAxis: [{
@@ -90,7 +94,7 @@
                 yAxis: [
                     {
                         type: 'value',
-                        name: 'Paper count',
+                        name: 'Author count',
                         // min: 0,
                         // max: 2000,
                         position: 'left'
@@ -98,13 +102,13 @@
                 ],
                 // series: series
                 series: [{
-                    name: 'Paper count',
+                    name: 'Author count',
                     type: 'line',
                     data: data.sort(function(x1, x2) {
                         var x1 = getFullYear(x1["name"].substring(1));
                         var x2 = getFullYear(x2["name"].substring(1));
                         return x1 > x2 ? 1: -1;
-                    }).map(x => x["count"]),
+                    }).map(x => x["author_number"]),
                     barWidth: '40px'
                 }]
             })
